<resources>
    <string name="app_name">FlowFenceTestApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sandbox_count">Sandbox Count</string>

    <string name="taint_label">Test Taint Label</string>
    <string name="network_deny_message">Can\'t send "%1$s" to the network</string>
    <string name="tainted">Tainted</string>
    <string name="loops_per_trial">Loops per trial</string>
    <string name="trials_per_run">Trials per run</string>
    <string name="call_latency_tests">Call Latency Tests</string>
    <string name="perf_tainted">Tainted</string>
    <string name="perf_not_tainted">Untainted</string>
    <string name="perf_spares_low">Min. spares (low)</string>
    <string name="perf_spares_high">Min. spares (high)</string>
    <string name="marshalling_tests">Marshalling Tests</string>
    <string name="marshal_sizes">Data sizes (32K, 1M, etc.)</string>
    <string name="sandboxes_low">Min sandboxes</string>
    <string name="sandboxes_high">Max sandboxes</string>
    <plurals name="sandbox_plurals">
        <item quantity="one">%d sandbox</item>
        <item quantity="other">%d sandboxes</item>
    </plurals>

    <string-array name="sandbox_count_labels">
        <item>Total</item>
        <item>Max idle</item>
        <item>Min spare</item>
        <item>Max spare</item>
    </string-array>
    <string name="title_activity_perf">Performance Experiment</string>
    <string name="memory_tests">Memory Tests</string>

    <string name="perf_start">Start Test</string>
    <string name="perf_cancel">Cancel Test</string>

    <string name="task_starting">Starting&#8230;</string>
    <string name="task_complete">Complete</string>
    <string name="task_cancelled">Cancelled</string>
    <string name="task_failed">Failed</string>
    <string name="task_starting_task">Starting task \'%1$s\'&#8230;</string>
    <string name="perf_failed_title">Performance test failed</string>
    <string name="perf_result_filename">TestResults/%2$tY%2$tm%2$td-%2$tH%2$tM%2$tS-%1$s.%3$s</string>
</resources>
