<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:useDefaultMargins="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/perf_params"
        android:layout_above="@+id/perf_progress">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memory_tests"
                android:id="@+id/perf_do_memory"
                android:textSize="@dimen/abc_text_size_medium_material"/>

            <android.support.v7.widget.GridLayout
                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                grid:useDefaultMargins="true"
                android:id="@+id/perf_params_memory"
                grid:columnCount="2"
                grid:alignmentMode="alignBounds"
                android:visibility="gone">

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_memory_sandboxes_low"
                    grid:layout_row="0"
                    grid:layout_column="0"
                    android:hint="@string/sandboxes_low"
                    android:layout_width="0dp"/>

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_memory_sandboxes_high"
                    grid:layout_row="0"
                    grid:layout_column="1"
                    android:layout_width="0dp"
                    android:hint="@string/sandboxes_high"/>
            </android.support.v7.widget.GridLayout>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_latency_tests"
                android:id="@+id/perf_do_latency"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_marginTop="8dp"/>

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                grid:useDefaultMargins="true"
                android:id="@+id/perf_params_latency"
                grid:columnCount="2"
                grid:alignmentMode="alignBounds"
                android:visibility="gone"
                >

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_latency_loops_per_trial"
                    grid:layout_row="0"
                    grid:layout_column="0"
                    android:hint="@string/loops_per_trial"
                    android:layout_width="0dp"/>

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_latency_trials_per_run"
                    grid:layout_row="0"
                    grid:layout_column="1"
                    android:layout_width="0dp"
                    android:hint="@string/trials_per_run"/>

                <CheckBox
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    grid:layout_row="1"
                    grid:layout_column="0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/perf_tainted"
                    android:id="@+id/perf_latency_tainted"/>

                <CheckBox
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    grid:layout_row="1"
                    grid:layout_column="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/perf_not_tainted"
                    android:id="@+id/perf_latency_not_tainted"/>

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_latency_spares_low"
                    grid:layout_row="2"
                    grid:layout_column="0"
                    android:hint="@string/perf_spares_low"
                    android:layout_width="0dp"
                    />

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_latency_spares_high"
                    grid:layout_row="2"
                    grid:layout_column="1"
                    android:layout_width="0dp"
                    android:hint="@string/perf_spares_high"/>
            </android.support.v7.widget.GridLayout>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marshalling_tests"
                android:id="@+id/perf_do_marshal"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_marginTop="8dp"/>

            <android.support.v7.widget.GridLayout
                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                grid:useDefaultMargins="true"
                android:id="@+id/perf_params_marshal"
                grid:columnCount="2"
                grid:alignmentMode="alignBounds"
                android:visibility="gone">

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_marshal_loops_per_trial"
                    grid:layout_row="0"
                    grid:layout_column="0"
                    android:hint="@string/loops_per_trial"
                    android:layout_width="0dp"/>

                <EditText
                    grid:layout_columnWeight="1"
                    grid:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/perf_marshal_trials_per_run"
                    grid:layout_row="0"
                    grid:layout_column="1"
                    android:layout_width="0dp"
                    android:hint="@string/trials_per_run"/>

                <EditText
                    grid:layout_columnSpan="2"
                    grid:layout_column="0"
                    grid:layout_row="1"
                    grid:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/perf_marshal_sizes"
                    android:hint="@string/marshal_sizes"/>

            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/perf_progress"
        android:layout_above="@+id/perf_status"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/perf_status"
        android:layout_above="@+id/perf_execute"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:phoneNumber="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perf_start"
        android:id="@+id/perf_execute"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"/>

</RelativeLayout>